--- a/applet/build.gradle
+++ b/applet/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     testImplementation "com.github.martinpaljak:apdu4j-core:2020b1"
     testImplementation "com.github.martinpaljak:apdu4j-pcsc:20.08.12"
 
+    testImplementation group: 'com.opencsv', name: 'opencsv', version: '5.10'
     testImplementation 'com.squareup.okhttp3:okhttp:4.9.1'
     testImplementation 'org.json:json:20180130'
     testImplementation 'commons-codec:commons-codec:1.15'
