test(PerformanceTest): Added a performance test

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ test_generator/__pycache__
 *~
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+applet/*_result.csv
