--- a/.github/workflows/javacard-test.yml
+++ b/.github/workflows/javacard-test.yml
@@ -10,9 +10,11 @@ name: JavaCard CI with Gradle
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches:
+      - main
   pull_request:
-    branches: [ $default-branch ]
+    branches:
+      - main
 
 jobs:
   build:
