--- a/.github/workflows/javacard-release.yml
+++ b/.github/workflows/javacard-release.yml
@@ -13,12 +13,11 @@ on:
         required: true
 
 jobs:
-  build:
-    name: Create Release
+  build-cap:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
       - name: Create Release
         id: create_release
         uses: comnoco/create-release@v2
@@ -31,3 +30,27 @@ jobs:
             Release description
           draft: true
           prerelease: false
+
+      - name: Check out repo
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+
+      - name: Build JavaCard applet with Gradle Wrapper
+        run: ./gradlew buildJavaCard
+
+      - name: Upload CAP artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Musig2JC Applet
+          path:
+            build/javacard/applet.cap
