--- a/.github/workflows/javacard-release.yml
+++ b/.github/workflows/javacard-release.yml
@@ -11,23 +11,27 @@ on:
       release_name:
         description: Release name
         required: true
+      release_description:
+        description: Release description
+        required: false
 
 jobs:
   build-cap:
 
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Create Release
         id: create_release
-        uses: comnoco/create-release@v2
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ inputs.tag_name }}
           release_name: Release ${{ inputs.release_name }}
-          body: |
-            Release description
+          body: ${{ inputs.release_description }}
           draft: true
           prerelease: false
 
