--- a/.github/workflows/javacard-release.yml
+++ b/.github/workflows/javacard-release.yml
@@ -56,9 +56,20 @@ jobs:
         run: |
           [ -e applet/build/javacard/applet.cap ] || exit 1
 
-      - name: Upload Musig2JC applet artifact
+      - name: Create Musig2JC applet artifact
         uses: actions/upload-artifact@v4
         with:
           name: applet.cap
           path:
-            applet/build/javacard
+            applet/build/javacard/applet.cap
+
+      - name: Upload Musig2JC applet artifact
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./applet/build/javacard/applet.cap
+          asset_name: applet.cap
+          asset_content_type: application/java-archive
