--- a/.github/workflows/javacard-release.yml
+++ b/.github/workflows/javacard-release.yml
@@ -34,7 +34,7 @@ jobs:
           tag_name: ${{ inputs.tag_name }}
           release_name: ${{ inputs.release_name }}
           body: ${{ inputs.release_description }}
-          draft: false
+          draft: true
           prerelease: false
 
       - name: Check out repo
@@ -50,6 +50,12 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+
+      - name: Set production variables
+        uses: |
+          sed -i -e 's/DEBUG = Constants.STATE_TRUE/DEBUG = Constants.STATE_FALSE/' applet/src/main/java/applet/Constants.java &&
+          sed -i -e 's/CARD_TYPE = jcmathlib.OperationSupport.SIMULATOR/CARD_TYPE = jcmathlib.OperationSupport.JCOP4_P71/' \
+          applet/src/main/java/applet/Constants.java
 
       - name: Build JavaCard applet
         run: ./gradlew buildJavaCard
