--- a/.github/workflows/javacard-test.yml
+++ b/.github/workflows/javacard-test.yml
@@ -29,6 +29,13 @@ jobs:
         with:
           submodules: true
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set production variables
+        uses: |
+          sed -i -e 's/DEBUG = Constants.STATE_TRUE/DEBUG = Constants.STATE_FALSE/' applet/src/main/java/applet/Constants.java &&
+          sed -i -e 's/CARD_TYPE = jcmathlib.OperationSupport.SIMULATOR/CARD_TYPE = jcmathlib.OperationSupport.JCOP4_P71/' \
+          applet/src/main/java/applet/Constants.java
+
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
