--- a/.github/workflows/javacard-test.yml
+++ b/.github/workflows/javacard-test.yml
@@ -32,9 +32,11 @@ jobs:
 
       - name: Set production variables
         run: |
-          sed -i -e 's/DEBUG = Constants.STATE_TRUE/DEBUG = Constants.STATE_FALSE/' applet/src/main/java/applet/Constants.java &&
+          CONSTANTS_LOCATION=applet/src/main/java/applet/Constants.java && \
+          [ -e $CONSTANTS_LOCATION ] || exit 1 && \
+          sed -i -e 's/DEBUG = Constants.STATE_TRUE/DEBUG = Constants.STATE_FALSE/' $CONSTANTS_LOCATION && \
           sed -i -e 's/CARD_TYPE = jcmathlib.OperationSupport.SIMULATOR/CARD_TYPE = jcmathlib.OperationSupport.JCOP4_P71/' \
-          applet/src/main/java/applet/Constants.java
+          $CONSTANTS_LOCATION
 
       - name: Set up JDK 11
         uses: actions/setup-java@v4
